--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1376,559 +1376,123 @@ body {
 .dropup .dropdown-toggle::after {
   display: none;
 }
-.cid-raQAcgigbo .modal-body .close {
-  background: #1b1b1b;
-}
-.cid-raQAcgigbo .modal-body .close span {
-  font-style: normal;
-}
-.cid-raQAcgigbo .carousel-inner > .active,
-.cid-raQAcgigbo .carousel-inner > .next,
-.cid-raQAcgigbo .carousel-inner > .prev {
-  display: table;
-}
-.cid-raQAcgigbo .carousel-control .icon-next,
-.cid-raQAcgigbo .carousel-control .icon-prev {
-  margin-top: -18px;
-  font-size: 40px;
-  line-height: 27px;
-}
-.cid-raQAcgigbo .carousel-control:hover {
-  background: #1b1b1b;
-  color: #fff;
-  opacity: 1;
-}
-@media (max-width: 767px) {
-  .cid-raQAcgigbo .container .carousel-control {
-    margin-bottom: 0;
-  }
-}
-.cid-raQAcgigbo .boxed-slider {
-  position: relative;
-  padding: 93px 0;
-}
-.cid-raQAcgigbo .boxed-slider > div {
-  position: relative;
-}
-.cid-raQAcgigbo .container img {
-  width: 100%;
-}
-.cid-raQAcgigbo .container img + .row {
-  position: absolute;
-  top: 50%;
-  left: 0;
-  right: 0;
-  -webkit-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  transform: translateY(-50%);
-  z-index: 2;
-}
-.cid-raQAcgigbo .mbr-section {
-  padding: 0;
-  background-attachment: scroll;
-}
-.cid-raQAcgigbo .mbr-table-cell {
-  padding: 0;
-}
-.cid-raQAcgigbo .container .carousel-indicators {
-  margin-bottom: 3px;
-}
-.cid-raQAcgigbo .carousel-caption {
-  top: 50%;
-  right: 0;
-  bottom: auto;
-  left: 0;
-  display: -webkit-flex;
-  align-items: center;
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
-  -webkit-align-items: center;
-}
-.cid-raQAcgigbo .mbr-overlay {
-  z-index: 1;
-}
-.cid-raQAcgigbo .container-slide.container {
-  min-width: 100%;
-  min-height: 100vh;
-  padding: 0;
-}
-.cid-raQAcgigbo .carousel-item {
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -o-transition: -o-transform 0.6s ease-in-out;
-  -webkit-transition: -webkit-transform 0.6s ease-in-out;
-  transition: transform 0.6s ease-in-out, -webkit-transform 0.6s ease-in-out, -o-transform 0.6s ease-in-out;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  -webkit-perspective: 1000px;
-  perspective: 1000px;
-}
-@media (max-width: 576px) {
-  .cid-raQAcgigbo .carousel-item .container {
-    width: 100%;
-  }
-}
-.cid-raQAcgigbo .carousel-item-next.carousel-item-left,
-.cid-raQAcgigbo .carousel-item-prev.carousel-item-right {
-  -webkit-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-}
-.cid-raQAcgigbo .active.carousel-item-right,
-.cid-raQAcgigbo .carousel-item-next {
-  -webkit-transform: translate3d(100%, 0, 0);
-  transform: translate3d(100%, 0, 0);
-}
-.cid-raQAcgigbo .active.carousel-item-left,
-.cid-raQAcgigbo .carousel-item-prev {
-  -webkit-transform: translate3d(-100%, 0, 0);
-  transform: translate3d(-100%, 0, 0);
-}
-.cid-raQAcgigbo .mbr-slider .carousel-control {
-  top: 50%;
-  width: 70px;
-  height: 70px;
-  margin-top: -1.5rem;
-  font-size: 35px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  transition: all .3s;
-}
-.cid-raQAcgigbo .mbr-slider .carousel-control.carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-raQAcgigbo .mbr-slider .carousel-control.carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-.cid-raQAcgigbo .mbr-slider .carousel-control .mbr-iconfont {
-  font-size: 2rem;
-}
-@media (max-width: 767px) {
-  .cid-raQAcgigbo .mbr-slider .carousel-control {
-    top: auto;
-    bottom: 1rem;
-  }
-}
-.cid-raQAcgigbo .mbr-slider .carousel-indicators {
-  position: absolute;
-  bottom: 0;
-  margin-bottom: 1.5rem !important;
-}
-.cid-raQAcgigbo .mbr-slider .carousel-indicators li {
-  max-width: 20px;
-  width: 20px;
-  height: 20px;
-  max-height: 20px;
-  margin: 3px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  opacity: .5;
-  transition: all .3s;
-}
-.cid-raQAcgigbo .mbr-slider .carousel-indicators li.active,
-.cid-raQAcgigbo .mbr-slider .carousel-indicators li:hover {
-  opacity: .9;
-}
-.cid-raQAcgigbo .mbr-slider .carousel-indicators li::after,
-.cid-raQAcgigbo .mbr-slider .carousel-indicators li::before {
-  content: none;
-}
-.cid-raQAcgigbo .mbr-slider .carousel-indicators.ie-fix {
-  left: 50%;
-  display: block;
-  width: 60%;
-  margin-left: -30%;
-  text-align: center;
-}
-@media (max-width: 576px) {
-  .cid-raQAcgigbo .mbr-slider .carousel-indicators {
-    display: none !important;
-  }
-}
-.cid-raQAcgigbo .mbr-slider > .container img {
-  width: 100%;
-}
-.cid-raQAcgigbo .mbr-slider > .container img + .row {
-  position: absolute;
-  top: 50%;
-  right: 0;
-  left: 0;
-  z-index: 2;
-  -moz-transform: translateY(-50%);
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
-}
-.cid-raQAcgigbo .mbr-slider > .container .carousel-indicators {
-  margin-bottom: 3px;
-}
-@media (max-width: 576px) {
-  .cid-raQAcgigbo .mbr-slider > .container .carousel-control {
-    margin-bottom: 0;
-  }
-}
-.cid-raQAcgigbo .mbr-slider .mbr-section {
-  padding: 0;
-  background-attachment: scroll;
-}
-.cid-raQAcgigbo .mbr-slider .mbr-table-cell {
-  padding: 0;
-}
-.cid-raQAcgigbo .carousel-item .container.container-slide {
-  position: initial;
-  width: auto;
-  min-height: 0;
-}
-.cid-raQAcgigbo .full-screen .slider-fullscreen-image {
-  min-height: 100vh;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  background-size: cover;
-}
-.cid-raQAcgigbo .full-screen .slider-fullscreen-image.active {
-  display: -o-flex;
-}
-.cid-raQAcgigbo .full-screen .container {
-  width: auto;
-  padding-right: 0;
-  padding-left: 0;
-}
-.cid-raQAcgigbo .full-screen .carousel-item .container.container-slide {
-  width: 100%;
-  min-height: 100vh;
-  padding: 0;
-}
-.cid-raQAcgigbo .full-screen .carousel-item .container.container-slide img {
-  display: none;
-}
-.cid-raQAcgigbo .mbr-background-video-preview {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-}
-.cid-raQAcgigbo .mbr-overlay ~ .container-slide {
-  z-index: auto;
-}
-.cid-raQAcgigbo DIV {
-  color: #cc2952;
-}
-.cid-raQAcgigbo B {
-  color: #ff3366;
-}
-.cid-raQscsyIll {
-  padding-top: 0px;
-  padding-bottom: 0px;
-  background-color: #cccccc;
-}
-.cid-raQscsyIll .mbr-slider .carousel-control {
-  background: #1b1b1b;
-}
-.cid-raQscsyIll .mbr-slider .carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-raQscsyIll .mbr-slider .carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-.cid-raQscsyIll .mbr-slider .modal-body .close {
-  background: #1b1b1b;
-}
-.cid-raQscsyIll .mbr-gallery-item > div::before {
-  content: '';
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background: #554346;
-  opacity: 0;
-  -webkit-transition: 0.2s opacity ease-in-out;
-  transition: 0.2s opacity ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
-}
-.cid-raQscsyIll .mbr-gallery-item > div:hover .mbr-gallery-title::before {
-  background: transparent !important;
-}
-.cid-raQscsyIll .mbr-gallery-item > div:hover:before {
-  opacity: 0.7 !important;
-}
-.cid-raQscsyIll .mbr-gallery-title {
-  font-size: .9em;
-  position: absolute;
-  display: block;
-  width: 100%;
-  bottom: 0;
-  padding: 1rem;
-  color: #fff;
-  z-index: 2;
-}
-.cid-raQscsyIll .mbr-gallery-title:before {
-  content: " ";
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  position: absolute;
-  background: #554346 !important;
-  opacity: 0.7;
-  -webkit-transition: 0.2s background ease-in-out;
-  transition: 0.2s background ease-in-out;
-  background: linear-gradient(to left, #554346, #45505b) !important;
-}
-.cid-rabMUQwzsb {
-  padding-top: 120px;
-  padding-bottom: 120px;
-  background-color: #f9f295;
-}
-.cid-rabMUQwzsb h3 {
-  text-align: center;
-}
-.cid-rabMUQwzsb .mbr-section-subtitle {
-  color: #767676;
-  font-weight: 300;
-}
-.cid-rabMUQwzsb .mbr-content-text {
-  color: #767676;
-}
-.cid-rabMUQwzsb .panel-item {
-  background: #ffffff;
-}
-.cid-rabMUQwzsb .card {
-  word-wrap: break-word;
-}
-.cid-rabMUQwzsb .mbr-iconfont {
-  font-size: 80px;
-  color: #149dcc;
-}
-.cid-rabMUQwzsb H3 {
-  text-align: center;
-}
-.cid-raQvZBB9es {
-  padding-top: 120px;
-  padding-bottom: 0px;
-  background-color: #55b4d4;
-}
-@media (min-width: 992px) {
-  .cid-raQvZBB9es .mbr-figure {
-    padding-left: 4rem;
-  }
-}
-@media (max-width: 992px) {
-  .cid-raQvZBB9es .mbr-figure {
-    padding-top: 1rem;
-  }
-}
-.cid-raQvZBB9es .mbr-text {
-  color: #767676;
-}
-.cid-rabOAsY1Qe {
-  background: #55b4d4;
-  padding-top: 120px;
-  padding-bottom: 120px;
-}
-.cid-rabOAsY1Qe .video-block {
-  margin: auto;
-}
-@media (max-width: 768px) {
-  .cid-rabOAsY1Qe .video-block {
-    width: 100% !important;
-  }
-}
-.cid-raQtxtesxi {
-  background: #55b4d4;
-  padding-top: 120px;
-  padding-bottom: 120px;
-}
-.cid-raQtxtesxi .video-block {
-  margin: auto;
-}
-@media (max-width: 768px) {
-  .cid-raQtxtesxi .video-block {
-    width: 100% !important;
-  }
-}
-.cid-raQtPMin8o {
-  background: #55b4d4;
-  padding-top: 120px;
-  padding-bottom: 120px;
-}
-.cid-raQtPMin8o .video-block {
-  margin: auto;
-}
-@media (max-width: 768px) {
-  .cid-raQtPMin8o .video-block {
-    width: 100% !important;
-  }
-}
-.cid-raQumrpQVs {
-  background: #55b4d4;
-  padding-top: 120px;
-  padding-bottom: 120px;
-}
-.cid-raQumrpQVs .video-block {
-  margin: auto;
-}
-@media (max-width: 768px) {
-  .cid-raQumrpQVs .video-block {
-    width: 100% !important;
-  }
-}
-.cid-raQxfVGGHX {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #ff7f9f;
-}
-@media (min-width: 992px) {
-  .cid-raQxfVGGHX .mbr-figure {
-    padding-right: 4rem;
-  }
-}
-@media (max-width: 992px) {
-  .cid-raQxfVGGHX .mbr-figure {
-    padding-bottom: 1rem;
-  }
-}
-.cid-raQxfVGGHX .mbr-text {
-  color: #767676;
-}
-.cid-raQv4P7cMW {
-  background: #ff7f9f;
-  padding-top: 120px;
-  padding-bottom: 120px;
-}
-.cid-raQv4P7cMW .video-block {
-  margin: auto;
-}
-@media (max-width: 768px) {
-  .cid-raQv4P7cMW .video-block {
-    width: 100% !important;
-  }
-}
-.cid-raQvkl6y1V {
-  background: #ff7f9f;
-  padding-top: 120px;
-  padding-bottom: 120px;
-}
-.cid-raQvkl6y1V .video-block {
-  margin: auto;
-}
-@media (max-width: 768px) {
-  .cid-raQvkl6y1V .video-block {
-    width: 100% !important;
-  }
-}
-.cid-raQIpytCJ9 {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #2e2e2e;
-}
-@media (max-width: 767px) {
-  .cid-raQIpytCJ9 .content {
-    text-align: center;
-  }
-  .cid-raQIpytCJ9 .content > div:not(:last-child) {
-    margin-bottom: 2rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-raQIpytCJ9 .media-wrap {
-    margin-bottom: 1rem;
-  }
-}
-.cid-raQIpytCJ9 .media-wrap .mbr-iconfont-logo {
-  font-size: 7.5rem;
-  color: #f36;
-}
-.cid-raQIpytCJ9 .media-wrap img {
-  height: 6rem;
-}
-@media (max-width: 767px) {
-  .cid-raQIpytCJ9 .footer-lower .copyright {
-    margin-bottom: 1rem;
-    text-align: center;
-  }
-}
-.cid-raQIpytCJ9 .footer-lower hr {
-  margin: 1rem 0;
-  border-color: #fff;
-  opacity: .05;
-}
-.cid-raQIpytCJ9 .footer-lower .social-list {
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
-  display: -webkit-flex;
-  flex-wrap: wrap;
-  justify-content: flex-end;
-  -webkit-justify-content: flex-end;
-  -webkit-flex-wrap: wrap;
-}
-.cid-raQIpytCJ9 .footer-lower .social-list .mbr-iconfont-social {
-  font-size: 1.3rem;
-  color: #fff;
-}
-.cid-raQIpytCJ9 .footer-lower .social-list .soc-item {
-  margin: 0 .5rem;
-}
-.cid-raQIpytCJ9 .footer-lower .social-list a {
-  margin: 0;
-  opacity: .5;
-  -webkit-transition: .2s linear;
-  transition: .2s linear;
-}
-.cid-raQIpytCJ9 .footer-lower .social-list a:hover {
-  opacity: 1;
-}
-@media (max-width: 767px) {
-  .cid-raQIpytCJ9 .footer-lower .social-list {
-    justify-content: center;
-    -webkit-justify-content: center;
-  }
-}
-.cid-rbvCh1lAum {
+.cid-ri6Aq0iGXe {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-color: #efefef;
+  background-image: url("../../../assets/images/mbr-1920x1394.jpg");
 }
-.cid-rbvCh1lAum .card-box {
-  padding: 0 2rem;
+.cid-ri6Aq0iGXe H1 {
+  text-align: center;
+  color: #f7ed4a;
 }
-.cid-rbvCh1lAum .mbr-section-btn {
-  padding-top: 1rem;
+.cid-ri6Aq0iGXe DIV {
+  color: #ffffff;
 }
-.cid-rbvCh1lAum .mbr-section-btn a {
-  margin-top: 1rem;
-  margin-bottom: 0;
+.cid-ri6BvY1AFH {
+  background-image: url("../../../assets/images/mbr-1-1920x1280.jpg");
 }
-.cid-rbvCh1lAum h4 {
-  font-weight: 500;
-  margin-bottom: 0;
-  text-align: left;
-  padding-top: 2rem;
+.cid-ri6BvY1AFH h1 {
+  color: #616161;
 }
-.cid-rbvCh1lAum p {
-  margin-bottom: 0;
-  text-align: left;
-  padding-top: 1.5rem;
-}
-.cid-rbvCh1lAum .mbr-text {
+.cid-ri6BvY1AFH h2,
+.cid-ri6BvY1AFH h3,
+.cid-ri6BvY1AFH p {
   color: #767676;
 }
-.cid-rbvCh1lAum .card-wrapper {
-  height: 100%;
-  padding-bottom: 2rem;
-  background: #ffffff;
-  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
-  transition: box-shadow 0.3s;
+.cid-ri6BvY1AFH .mbr-section-subtitle {
+  font-style: italic;
 }
-.cid-rbvCh1lAum .card-wrapper:hover {
-  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
-  transition: box-shadow 0.3s;
+.cid-ri6CAEdXBC {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #c1c1c1;
+}
+.cid-ri6CAEdXBC .counter-container {
+  color: #767676;
+}
+.cid-ri6CAEdXBC .counter-container ol {
+  margin-bottom: 0;
+  counter-reset: myCounter;
+}
+.cid-ri6CAEdXBC .counter-container ol li {
+  margin-bottom: 1rem;
+}
+.cid-ri6CAEdXBC .counter-container ol li {
+  list-style: none;
+  padding-left: .5rem;
+}
+.cid-ri6CAEdXBC .counter-container ol li:before {
+  position: absolute;
+  left: 0px;
+  margin-top: -10px;
+  counter-increment: myCounter;
+  content: counter(myCounter);
+  display: inline-block;
+  text-align: center;
+  margin: 5px 10px;
+  line-height: 40px;
+  transition: all .2s;
+  color: #ffffff;
+  background: #149dcc;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+.cid-ri6DQi2kCd {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-ri6DQi2kCd .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-ri6DQi2kCd .media-container-row {
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+.cid-ri6DQi2kCd .mbr-text {
+  color: #767676;
+}
+.cid-ri6DQi2kCd .mbr-author-desc {
+  display: block;
+  color: #767676;
+}
+.cid-ri6DQi2kCd .mbr-author-name {
+  color: #767676;
+}
+.cid-ri6DQi2kCd .mbr-testimonial .panel-item {
+  background-color: #ffffff;
+}
+.cid-ri6DQi2kCd .mbr-testimonial .card-block {
+  -webkit-flex-grow: 0;
+  flex-grow: 0;
+  padding: 2.4rem 2.4rem 0 2.4rem;
+}
+.cid-ri6DQi2kCd .mbr-testimonial .card-block .testimonial-photo {
+  display: inline-block;
+  width: 120px;
+  height: 120px;
+  margin-bottom: 1.6rem;
+  overflow: hidden;
+  border-radius: 50%;
+}
+.cid-ri6DQi2kCd .mbr-testimonial .card-block .testimonial-photo img {
+  width: 100%;
+  min-width: 100%;
+  min-height: 100%;
+}
+.cid-ri6DQi2kCd .mbr-testimonial .card-footer {
+  padding-bottom: 2.4rem;
+  border-top: 0;
+  padding-top: 1rem;
+  word-wrap: break-word;
+  word-break: break-word;
+  background: none;
+}
+@media (max-width: 300px) {
+  .cid-ri6DQi2kCd .testimonial-photo {
+    width: 100% !important;
+    height: auto !important;
+  }
 }
